// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package proto;

import "go.chromium.org/luci/bisection/proto/v1/common.proto";

option go_package = "go.chromium.org/luci/bisection/task/proto";

// Payload of the FailedBuildIngestionTask task.
message FailedBuildIngestionTask {
  // The bbid of the failed build.
  int64 bbid = 1;
}

// Payload of the RevertCulpritTask
message RevertCulpritTask {
  // The ID of the CompileFailureAnalysis associated with the culprit
  int64 analysis_id = 1;

  // The ID of the Suspect which is the culprit
  int64 culprit_id = 2;
}

// Payload of the CancelAnalysis
message CancelAnalysisTask {
  // The analysis ID that we need to cancel.
  int64 analysis_id = 1;
}

// Payload for Culprit Verification
message CulpritVerificationTask {
  // The analysis ID
  int64 analysis_id = 1;
  // The ID of the suspect for culprit verification
  int64 suspect_id = 2;
  // The encoded datastore key of suspect parent
  string parent_key = 3;
}

// Payload for test failure detection.
message TestFailureDetectionTask {
  // The project to select test failures from.
  string project = 1;

  // Test variants selected must not satisfy any dimension in the dimension excludes list.
  // Eg. [{key:"os", value:"Ubuntu-22.04"},{key:"os", value:"Mac13"}],
  // test failures with either these two OS should be excluded.
  repeated luci.bisection.v1.Dimension dimension_excludes = 2;
}

// Payload for test failure bisection.
message TestFailureBisectionTask {
  // The ID of TestFailureAnalysis that the bisector should bisect.
  int64 analysis_id = 1;
}

// Payload for test failure culprit verification
message TestFailureCulpritVerificationTask {
  // The analysis ID
  int64 analysis_id = 1;
  // The suspect ID to verify
  int64 suspect_id = 2;
  // The encoded datastore key of suspect parent
  string parent_key = 3;
}

// Payload for test failure culprit action.
message TestFailureCulpritActionTask {
  // The analysis ID
  int64 analysis_id = 1;
}